--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    color: #fff;
-    background-color: #4F8BF9;
+    color: rgb(3, 2, 22);
+    background-color: #95b3eb;
 }
 
 .stTextInput>div>div>input {
