--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     color: rgb(3, 2, 22);
-    background-color: #95b3eb;
+    background-color: #c6d5f0;
 }
 
 .stTextInput>div>div>input {
